# vslam_research

./: README.md  slam.cpp
ORB_AR_DEMO/: CMakeLists.txt
ORB_AR_DEMO/include/: plane_detect.h
ORB_AR_DEMO/include/ORB_SLAM/: Tracking.h
ORB_AR_DEMO/lib/: libORB_SLAM2.dylib
ORB_AR_DEMO/src/: ar_gl.cpp  plane_detect.cpp
ORB_SLAM2_OSX_with_AR/Examples/Monocular/: mono_euroc.cc  mono_tum.cc
ORB_SLAM2_OSX_with_AR/Examples/RGB-D/: rgbd_tum.cc
ORB_SLAM2_OSX_with_AR/include/: System.h
ORB_SLAM2_OSX_with_AR/src/: LoopClosing.cc  System.cc  Tracking.cc
ORB_WIN/ORB_SLAM2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ORB_SLAM2.sln  ORB_SLAM2.vcxproj  ORB_SLAM2.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mono_euroc.vcxproj  mono_euroc.vcxproj.filters  mono_kitti.vcxproj  mono_kitti.vcxproj.filters  mono_tum.vcxproj  mono_tum.vcxproj.filters  rgbd_tum.vcxproj  rgbd_tum.vcxproj.filters  stereo_euroc.vcxproj  stereo_euroc.vcxproj.filters  stereo_kitti.vcxproj  stereo_kitti.vcxproj.filters
ORB_WIN/ORB_SLAM2/Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
ORB_WIN/ORB_SLAM2/Examples/RGB-D/: rgbd_tum.cc
ORB_WIN/ORB_SLAM2/Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
ORB_WIN/ORB_SLAM2/include/: System.h  export.h
ORB_WIN/ORB_SLAM2/src/: LocalMapping.cc  LoopClosing.cc  MapPoint.cc  ORBextractor.cc  System.cc  Tracking.cc  Viewer.cc
aruco_marker/: CMakeLists.txt  README.md  aruco_ar.cpp  controls.cpp  detect_marker.cpp  objloader.cpp
glfw_test/: CMakeLists.txt  glfw_test.cpp
labtop-AR-demo/: CMakeLists.txt  README.md
labtop-AR-demo/Shaders/: TextureFragmentShader.fragmentshader
labtop-AR-demo/include/: planar_tracking.h  utils.h
labtop-AR-demo/src/: controls.cpp  main.cpp  planar.cpp
